# ai-postgres-analysis

./: .env.example  .python-version  README.md  prompt.txt  pyproject.toml
postgres_ai_agent/: main.py
postgres_ai_agent/modules/: db.py  llm.py
